Logging, Internationalization, Java Docs

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -34,3 +34,11 @@ NotEmpty.loginBean.password = Password cannot be blank
 #typeMismatch=Invalid format
 #methodInvocation.myRequest.amount=Invalid format
 convertedamount.message = The value of {0}
+
+#Error Messages
+UNEXPECTED_SYSTEM_EXCEPTION_EXCEPTION = Unexpected exception occurred! Please re-login
+NO_USER_ASSOCIATED_SESSION_EXCEPTION = No user associated with the current session! Please re-login
+INVALID_USER_EXCEPTION = User does not exist. Kindly register to access the system.
+AUTHENTICATION_FAILURE_EXCEPTION = Authentication Failure! Please enter valid credentials!
+LOGOUT_MESSAGE = You have successfully logged out
+EMAIL_ALREADY_REGISTERED = Email is already Registered
